syntax = "proto2";

import "serialization/quantities.proto";

package principia.serialization;

message R3Element {
  required Quantity x = 1;
  required Quantity y = 2;
  required Quantity z = 3;
}

// TODO(phl): This should probably include the tag of the frame.
message Multivector {
  oneof rank {
    R3Element vector = 1;
    R3Element bivector = 2;
    Quantity trivector = 3;
  }
}

message Point {
  oneof vector {
    Multivector multivector = 1;
    Quantity scalar = 2;
  }
}

message Pair {
  message Element {
    oneof element {
      Multivector multivector = 1;
      Point point = 2;
    }
  }
  required Element t1 = 1;
  required Element t2 = 2;
}
